Add structure of toggle theme and hide sidebar.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
         <h4 id="headline-sidepanel">ALL BOARDS (1)</h4>
         <button class="board-btn">Launch Career</button>
       </div>
+       <!-- Theme Toggle: Switch between light and dark mode. -->
+      <div class="sidebar-bottom">
+        <div class="toggle-container">
+          <span class="icon">
+            <img src="./assets/icon-light-theme.svg" alt="icon-light-theme">
+          </span>
+            <label class="switch">
+              <input type="checkbox" id="themeToggle">
+              <span class="slider"></span>
+            </label>
+          <span class="icon">
+            <img src="./assets/icon-dark-theme.svg" alt="icon-dark-theme">
+          </span>
+        </div>
+        <div class="hide-sidebar-btn">
+          <button class="hide-btn">🚫   Hide sidebar</button>
+        </div>
     </nav>
 
     <!-- Main Layout: Header with board title, add task button, and main content area for task columns. -->
