add interactin of the toggle theme and hide sidebar button.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       sizes="32x32"
       href="./assets/favicon.svg"
     />
-    <script defer src="./scripts.js" type="module"></script>
+    <script defer src="./scripts.js/theme.js" type="module"></script>
     <title>Kanban Task Management</title>
   </head>
 
@@ -29,7 +29,7 @@
         <h4 id="headline-sidepanel">ALL BOARDS (1)</h4>
         <button class="board-btn">Launch Career</button>
       </div>
-       <!-- Theme Toggle: Switch between light and dark mode. -->
+      <!-- Theme Toggle: Switch between light and dark mode. -->
       <div class="sidebar-bottom">
         <div class="toggle-container">
           <span class="icon">
