--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       sizes="32x32"
       href="./assets/favicon.svg"
     />
-    <script defer src="./scripts.js/theme.js" type="module"></script>
+    <script defer src="./scripts.js/main.js" type="module"></script>
     <title>Kanban Task Management</title>
   </head>
 
