Added a Header "layout"

--- a/Index.html
+++ b/Index.html
@@ -25,6 +25,26 @@
         </button>
       </div>
     </nav>
+
+    <div id="layout">
+      <header id="header" class="sticky-header">
+        <div class="header-name-div">
+          <img
+            src="./assets/favicon.svg"
+            alt="logo-mobile"
+            class="logo-mobile"
+          />
+          <h2 class="header-board-name" id="header-board-name">
+            Launch Career
+          </h2>
+        </div>
+        <div class="header-actions">
+          <button id="add-task-btn" class="add-task-btn">
+            <span class="mobile-icon">+</span>
+            <span class="full-text"> Add New Task</span>
+          </button>
+        </div>
+      </header>
     
 </body>
 </html>
