--- a/Index.html
+++ b/Index.html
@@ -73,6 +73,60 @@
       </div>
     </div>
 
-    
+    <dialog id="task-modal">
+      <form method="dialog" id="task-form">
+        <div class="modal-header">
+          <h3>Task</h3>
+          <button type="button" class="close-btn" id="close-modal-btn">
+            &times;
+          </button>
+        </div>
+
+        <label for="task-title">Title</label>
+        <input type="text" id="task-title" name="title" required />
+
+        <label for="task-desc">Description</label>
+        <textarea id="task-desc" name="description" rows="4"></textarea>
+
+        <label for="task-status">Status</label>
+        <select id="task-status" name="status" required>
+          <option value="todo">todo</option>
+          <option value="doing">doing</option>
+          <option value="done">done</option>
+        </select>
+
+        <div class="modal-buttons">
+            <button type="button" id="save-task-changes-btn" class="btn btn-primary">Save Changes</button>
+            <button type="button" id="delete-task-btn" class="btn btn-danger">Delete Task</button>
+        </div>
+      </form>
+    </dialog>
+
+    <dialog id="add-task-modal">
+      <form method="dialog" id="add-task-form">
+        <div class="modal-header">
+          <h3>Add New Task</h3>
+          <button type="button" class="close-btn" id="close-modal-btn">
+            &times;
+          </button>
+        </div>
+        <label for="new-task-title">Title</label>
+        <input type="text" id="new-task-title" name="title" required />
+
+        <label for="new-task-desc">Description</label>
+        <textarea id="new-task-desc" name="description" rows="4"></textarea>
+
+        <label for="new-task-status">Status</label>
+        <select id="new-task-status" name="status" required>
+          <option value="todo">todo</option>
+          <option value="doing">doing</option>
+          <option value="done">done</option>
+        </select>
+        <button id="create-task">Create Task</button>
+      </form>
+    </dialog>
+
+    <button class="show-sidebar-btn">
+      👀  </button>
 </body>
 </html>
